--- a/classes/production/quantified-self-java-spring/application.properties
+++ b/classes/production/quantified-self-java-spring/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost/quantified_self_java
 spring.datasource.username=gsjava
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
